# simpleCI

./: CMakeLists.txt  Jenkinsfile  README.md  main.cpp  vcpkg-configuration.json
.github/workflows/: cmake-single-platform.yml
scripts/: build.sh  run.sh
tests/: CMakeLists.txt  unit_test.cc
